--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Raysmond
 subtitle: 矛盾，自我，運動，代码。
-description:
+description: 目前是复旦大学研三毕业生，以后将就职魔都。擅长后端开发，喜欢互联网技术，相信科技让生活更美好。
 author: Raysmond
 language: zh-tw
 timezone:
@@ -28,7 +28,7 @@ i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+new_post_name: :year-:month-:day-:title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
@@ -42,6 +42,8 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
+
+
 
 # Category & Tag
 default_category: uncategorized
@@ -65,6 +67,8 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 # theme: landscape
 theme: yilia
+
+disqus_shortname: raysmond
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
