--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Raysmond
-subtitle: 矛盾，自我，運動，代码。
-description: 目前是复旦大学研三毕业生，以后将就职魔都。擅长后端开发，喜欢互联网技术，相信科技让生活更美好。
+subtitle: 余雖不敏，然余誠矣。
+description: 研究生畢業，将就职魔都。擅长后端开发，喜欢互联网，相信科技让生活更美好。喜歡運動，比如健身，騎行；有時文藝，比如讀書，寫字，唱歌等。
 author: Raysmond
 language: zh-tw
 timezone:
