--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -70,4 +70,4 @@ friends:
   友情链接5: http://localhost:4000/
   友情链接6: http://localhost:4000/
 
-aboutme: Raysmond<br><br>九一摩羯，生性矛盾<br>熱愛運動，追求自我<br>混跡魔都，卖碼為生
+aboutme: Raysmond<br><br>九一摩羯，生性矛盾<br>熱愛運動，追求自我<br>怪人一個，自娛自樂<br>混跡魔都，卖碼為生
