--- a/_config.yml
+++ b/_config.yml
@@ -73,10 +73,18 @@ theme: yilia-new
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
+# deploy:
+#   type: git
+#   repo: git@github.com:Raysmond/raysmond.github.io.git
+#   branch: master
+
 deploy:
-  type: git
-  repo: git@github.com:Raysmond/raysmond.github.io.git
-  branch: master
+  type: rsync
+  host: 118.89.154.27
+  user: root
+  root: /var/www/raysmond.com
+  port: 22
+
 
 sitemap:
     path: sitemap.xml
